--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "airtable": "^0.12.1",
+    "axios": "^1.7.7",
     "lodash": "^4.17.21",
     "next": "^13.4.7",
     "react": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-router": "^6.14.1",
     "react-slick": "^0.29.0",
     "sass": "^1.63.6",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
